namespace DefaultNamespace
{
    public static class AnimTriggersNameManager
    {
        public const string SmallLineJump = "SmallLineJump";
        public const string JumpOverSaw = "CanJumpOverSaw";
        public const string LeftSideJumpTurn = "CanLeftTurnJump";
        public const string RightSideJumpTurn = "CanRightTurnJump";
        public const string LeftSideJumpLine = "SmallLineJump";
        public const string RightSideJumpLine = "SmallLineJump";
        
    }
}